Corrected z-index for color change circles

--- a/Main/style.css
+++ b/Main/style.css
@@ -40,6 +40,7 @@ header {
   position: fixed;
   width: 100%;
   backdrop-filter: blur(50px);
+  z-index: 1;
 }
 
 h1 {
